Navbar dark mode error fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -175,7 +175,7 @@
 }
 
 .dark-nav {
-    background-color: rgba(255,255,255,0.15);
+    background-color: rgba(0,0,0,0.151);
     transition: 0.2s background-color;
 }
 
